--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -194,6 +194,12 @@ The experiment can be viewed at https://langcog.stanford.edu/expts/EJY/soc-info/
 
 # Results
 
+## Action selections
+
+## Response times
+
+## Entropy change
+
 # Discussion 
 
 # Acknowledgements
